# smilecms

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  smilecms.yml
.ai-rules/: python.md
.continue/rules/: python.md
.github/workflows/: ci.yml
content/posts/: demo-article.md  hello.md  ipsum-first.md  lyrics-life-like-water.md  markdown-kitchen-sink.md  the-zero-theorum.md  vampire-motif-article.md
docs/: architecture.md  content-workflows.md  frontend.md  media-processing.md  requirements.md  theme-dev.md  usage.md
examples/demo-site/: smilecms.yml
examples/demo-site/content/posts/: ipsum-first.md  markdown-kitchen-sink.md
examples/demo-site/media/image_gallery_raw/demo_gallery_1/: 0096b6ad-14bf-4559-941f-fa02c8fc4583.json  0877b25d-ff82-47d1-83a2-6c9fa604a206.json  1d2e2a7f-6df1-4eee-84cb-8e247742ce7c.json  2eb0818d-9f90-470a-a590-cc1656c939bb.json  590aad60-388f-42ba-920c-00e35288c035.json  7f3c6390-46eb-4c7c-8b2d-d4f9b8e38a44.json  80123f41-1adc-45de-aaf3-4744745f90cd.json  b459d03e-a1ed-4ba8-9952-2089877fcbd4.json  bed7a186-5177-4420-aa4c-6927edea3a11.json  c3fe9f03-5cd2-4edc-b7c2-018c4c0371ee.json  ce22cecb-63a8-4580-bdaf-fd23951484b9.json  d7e94121-0509-4ea5-a5b1-6723bef3fd4a.json  f6765f0e-df79-44de-b5fa-ed7400ec8d98.json
examples/demo-site/media/image_gallery_raw/demo_gallery_2/: 44266bbe-8512-441d-8e39-90340678b439.json  6d72b9bf-bcc7-4ec0-8738-2a7c8e32ad9b.json  72f36b12-a78e-4fc4-92c5-cf66d9065342.json  9685aa66-e0b0-4c97-9602-ca894185dfd5.json  aee28d43-553e-4393-b661-61396aa9e476.json  meta.yml
examples/demo-site/media/music_collection/im-not-waiting/: meta.yml
examples/demo-site/web/bold-theme-1/config/: site.json
examples/demo-site/web/bold-theme-1/gallery/: index.html
examples/demo-site/web/bold-theme-1/journal/: index.html
examples/demo-site/web/bold-theme-1/js/: gallery.js  journal.js  music.js  renderer.js
examples/demo-site/web/bold-theme-1/styles/: components.css  gallery.css  music.css
examples/demo-site/web/bold-theme-1/templates/: header.html  tile-audio.html
examples/demo-site/web/bold-theme-1/themes/default/: base.html
examples/demo-site/web/bold-theme-1/themes/default/pages/: index.html  music.html
examples/demo-site/web/bold-theme-1/themes/default/partials/: footer.html
examples/demo-site/web/dark-theme-1/: index.html
examples/demo-site/web/dark-theme-1/gallery/: index.html
examples/demo-site/web/dark-theme-1/js/: journal.js
examples/demo-site/web/dark-theme-1/music/: index.html
examples/demo-site/web/dark-theme-1/styles/: components.css  gallery.css  music.css  typography.css
examples/demo-site/web/dark-theme-1/templates/: hero.html  tile-article.html
media/image_gallery_raw/demo_gallery_1/: meta.yml
media/image_gallery_raw/demo_gallery_2/: meta.yml
media/image_gallery_raw/painted-landscapes/: meta.yml  misty-trails.json  sunset-ridge.json  taggedzi_afro_pop_koala_bear_252ddd4f-0132-4658-9622-8e701c783d7f.json  taggedzi_afro_pop_koala_bear_76f2bebb-5ae5-4ac9-a8d9-526b76c2cb43.json  taggedzi_afro_pop_koala_bear_9efb014f-2e84-48b5-9b18-25d6ad7e391b.json  taggedzi_afro_pop_koala_bear_dcbaef1a-a44f-42ef-9689-5f03e007ad7a.json  twilight-grove.json
media/music_collection/doorway-dreams/: lyrics.md  meta.yml
media/music_collection/im-not-waiting/: lyrics.md
media/music_collection/melting-away/: lyrics.md  meta.yml
src/: __init__.py  articles.py  cli.py  collections.py  config.py  feeds.py  gui_service.py  htmlvalidate.py  jsvalidate.py  markdown.py  pages.py  preview_server.py  staging.py  state.py  templates.py  validation.py  verify.py
src/content/: __init__.py  models.py  parsers.py
src/gallery/: __init__.py  inference.py  llm.py  metadata.py  models.py  pipeline.py  wdtagger.py
src/gui/: main.py
src/manifests/: generator.py  models.py
src/media/: __init__.py  audit.py  models.py  processor.py
src/music/: datasets.py
src/schemas/: __init__.py  content_post.schema.json
src/themes/: __init__.py
tests/: test_articles.py  test_cli_build_output_override.py  test_cli_init.py  test_cli_lint.py  test_cli_new.py  test_config_paths.py  test_content_parsers.py  test_feeds.py  test_gallery_pipeline.py  test_htmlvalidate.py  test_ingest.py  test_jsvalidate.py  test_manifests.py  test_media_audit.py  test_media_pipeline.py  test_oversized_images.py  test_pages.py  test_reporting.py  test_verify.py
tests/fixtures/content/posts/: example.md  minimal.md
tests/fixtures/test-theme/themes/default/: base.html  theme.json
tests/fixtures/test-theme/themes/default/pages/: article.html  gallery.html  music.html
tools/: run_pytest.py
web/: index.html
web/bold-theme-1/: index.html
web/bold-theme-1/journal/: index.html
web/bold-theme-1/js/: app.js  gallery.js  journal.js  music.js  renderer.js
web/bold-theme-1/music/: index.html
web/bold-theme-1/styles/: base.css  components.css  gallery.css  journal.css  layout.css  music.css  tokens.css  typography.css
web/bold-theme-1/templates/: footer.html  nav.html  section.html  tile-article.html  tile-gallery.html
web/bold-theme-1/themes/default/: theme.json
web/bold-theme-1/themes/default/pages/: article.html
web/bold-theme-1/themes/default/partials/: header.html  inline-script.html
web/config/: site.json
web/dark-theme-1/journal/: index.html
web/dark-theme-1/js/: gallery.js  journal.js  music.js  renderer.js
web/dark-theme-1/templates/: header.html  tile-audio.html  tile-gallery.html
web/dark-theme-1/themes/default/: base.html
web/dark-theme-1/themes/default/pages/: gallery.html
web/dark-theme-1/themes/default/partials/: header.html  inline-script.html
web/gallery/: index.html
web/js/: app.js  gallery.js  journal.js  music.js  renderer.js
web/styles/: base.css  components.css  gallery.css  layout.css  music.css  tokens.css  typography.css
web/templates/: nav.html  tile-article.html  tile-audio.html  tile-gallery.html
web/themes/default/: base.html  theme.json
web/themes/default/pages/: article.html
web/themes/default/partials/: footer.html  inline-script.html  nav.html
(+2 files in other folders)
