[project]
name = "smilecms"
version = "0.1.0"
description = "Static-first publishing pipeline with Python builds and JSON-driven front-end."
requires-python = ">=3.11"
authors = [{name = "Matthew Craig"}]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "rich>=13.7",
  "jsonschema>=4.23",
  "Pillow>=10.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "mypy>=1.10",
  "ruff>=0.4",
  "timm==1.0.20"
]
ml = [
  "huggingface_hub[hf_xet]",
  "transformers>=4.41",
  "torch>=2.3"
]

[project.scripts]
smilecms = "build.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["build*"]
exclude = ["content*", "media*", "site*", "web*"]

[tool.setuptools.package-data]
"build.schemas" = ["*.json"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
